@@ -83,6 +83,9 @@ Changes for v2.02
 - Fix permissions for DecodeIR.html and DecodeIR_ChangeLog.txt (Greg)
 - Make JP1 Parallel the last available interface (Greg)
 - Update Digit Maps through 520 (Greg)
+-- Beta 2
+- Made installation directory read-only by putting rmaster.err in java.io.tmpdir, and (on non-Windows, Windows already had similar fix) putting resource file in home directory. (Bengt)
+- If RDF [Protocols] section contains an entry for a variant that has no code for the processor concerned, ignore that entry. (Graham)
 
 Changes for v2.01
 -- Alpha --
